# SecureShell

./: .gitignore  CMakeLists.txt  PasswordManager.cpp  README.md  refactoring_plan.md  sample_commands.txt
SecureShell/src/: main.cpp
SecureShell/src/cryptography_library/: CaesarCipher.h  ICryptography.h  XORCipher.h
SecureShell/src/password_manager/: PasswordManager.cpp  PasswordManager.h
SecureShell/src/terminal/: test_shell.cpp
SecureShell/src/utils/: FileHandler.cpp  FileHandler.h  GenerateRandomPassword.cpp  GenerateRandomPassword.h  IFileHandler.h
config/: terminal_config.txt
encryptionLib/: PasswordManager.cpp  SimpleEncryptLib.cpp  SimpleEncryptLib.h  passwords.txt
include/config/: ConfigManager.h
include/encryption/: EncryptionHandler.h  FileEncryption.h
include/passman/: PasswordCrypto.h  PasswordManager.h  PasswordManagerOperations.h  PasswordStorage.h  PasswordTypes.h
include/terminal/: CommandImplementation.h  CommandParser.h  FileOperations.h  Terminal.h
include/utils/: Utils.h
src/: launcher.cpp  main.cpp
src/config/: ConfigManager.cpp
src/cryptography_library/: CaesarCipher.h
src/encryption/: EncryptionHandler.cpp  FileEncryption.cpp
src/passman/: PasswordCrypto.cpp  PasswordManager.cpp  PasswordManagerOperations.cpp  PasswordStorage.cpp
src/password_manager/: PasswordManager.cpp  PasswordManager.h
src/terminal/: CommandImplementation.cpp  CommandParser.cpp  FileOperations.cpp  Terminal.cpp
src/utils/: Utils.cpp  UtilsHelpers.cpp
tests/: LauncherTest.cpp  TestFramework.h  TestMain.cpp
tests/encryption/: FileEncryptionTest.cpp
tests/launcher/: LauncherTest.cpp
tests/terminal/: CommandImplementationTest.cpp  CommandParserTest.cpp  CompileAndRunTest.cpp  TerminalTest.cpp
